--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
         <item>Ada</item>
         <item>Tidak Ada</item>
     </string-array>
+
+    <string-array name="laporan">
+        <item>LAHIR</item>
+        <item>MATI</item>
+        <item>KAWIN</item>
+        <item>SAKIT</item>
+        <item>TOTAL ADA</item>
+    </string-array>
 </resources>
